welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
  var taille = getMondeHauteur()  
  var T:Array[Color] = new Array(taille) 
  for (i <- 0 to taille-2) {
    T(i)=getCouleurSol()
    avance()
  }
  T(taille-1)=getCouleurSol()
  recule(taille-1)
    
  var large=getMondeLargeur()
  var decalage=0
  for (i <- 0 to large-2) {
    gauche()
    avance()
    droite()
    decalage=litMessage().toInt
    printColonne(T,decalage,taille)
  }
  
}
def printColonne(T:Array[Color],decalage:Int,taille:Int) {
  var c:Color = T(0)  
  for (i <- 0 to T.length-2) {
    c=T((i+decalage)%taille) 
    setCouleurBrosse(c)
    baisseBrosse()
    leveBrosse()
    avance()
  }
  c=T((T.length-1+decalage)%taille) 
  setCouleurBrosse(c)
  baisseBrosse()
  leveBrosse()
  recule(t.length-1)
  
}